trunk/Archive2/96/c1fd34299c9f9b/output
main.cpp:10:19: error: 'virtual void Setting::f1()' cannot be overloaded
      virtual void f1();
                   ^
main.cpp:9:18: error: with 'virtual void Setting::f1()'
     virtual void f1();
                  ^
main.cpp:11:1: error: expected ';' after class definition
 }
 ^
main.cpp: In constructor 'Setting::Setting()':
main.cpp:6:9: error: 'f2' was not declared in this scope
      f2();
         ^
main.cpp: At global scope:
main.cpp:15:13: error: expected unqualified-id before ')' token
     Setting(){
             ^
main.cpp:22:19: error: 'virtual void Setting2::f1()' cannot be overloaded
      virtual void f1();
                   ^
main.cpp:21:18: error: with 'virtual void Setting2::f1()'
     virtual void f1();
                  ^
main.cpp:23:1: error: expected ';' after class definition
 }
 ^
